'お気に入り一覧、お気に入り機能の追加'

--- a/templates/twitter/favorite.html
+++ b/templates/twitter/favorite.html
@@ -5,21 +5,11 @@
 <div class="content container">
     <div class="row">
         <div class="col-md-8">
-          <h2>{{other_user.get_username}} のツイート</h2>
+          <h2>お気に入りのツイート</h2>
 
           <form action="" method="POST">{% csrf_token %}
-              {% if user.id == other_user.id %}
-                  <h3>自分のツイートを表示しています。</h3>
-              {% elif follow is True %}
-                  <a href="{% url 'twitter:follow_deleted' other_user.id %}" class="follow-del-button">×フォローを解除</a>
-                  <br><br>
-              {% else %}
-                  <a href="{% url 'twitter:followed' other_user.id %}" class="followed-button">✓フォローする</a>
-                  <br><br>
-              {% endif %}
-
               {% if tweet_list is null or tweet_list.count == 0 %}
-                <p>表示できるツイートはありません。</p>
+                <p>お気に入りのツイートはありません。</p>
               {% else %}
                 {% for tweet in tweet_list %}
                   <table class="tweet-table">
@@ -30,7 +20,7 @@
                       <td>{{tweet.tweet_text}}</td>
                     </tr>
                     <tr>
-                      <td align="right"><a class="favorite" href="{% url 'twitter:add_favorite' tweet.id %}">＋お気に入り</a></td>
+                      <td align="right"><a class="favorite" href="{% url 'twitter:del_favorite' tweet.id %}">－お気に入り削除</a></td>
                     </tr>
                   </table>
                   <p class="tweet-time">{{tweet.created_time}}</p>
